# START-Hack

./: .gitignore  README.md  pyproject.toml
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  temp.py
backend/backups/: six.py  temp copy.ipynb  temp.ipynb
backend/backups/api/: six.py
backend/backups/conversion/: six_to_rechart.py
backend/backups/helper/: helper.py
backend/baml_client/: async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
backend/baml_src/: api_request.baml  canvas.baml  clients.baml  resume.baml
backend/res/: asset_allocation.json
backend/src/: generate_canvas.py
backend/src/api/: six.py  test.ipynb
backend/src/canvas/: canvas_20250320_183245.json  canvas_20250320_194418.json  canvas_20250320_203303.json  canvas_20250320_230328.json  canvas_20250320_230529.json
backend/src/conversion/: six_to_rechart.py
backend/src/server/: functions.py  models.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/elements/: Dashboard.tsx  Sidebar.tsx  Tobpar.tsx  Topbar.tsx  UserInput.tsx
frontend/components/: areachart.tsx  barchart.tsx  candle-chart.tsx  candlestick.tsx  datatable.tsx  line-chart.tsx  piechart.tsx  tile-factory.tsx  user-avatar.tsx
frontend/context/: DashboardContext.tsx
frontend/types/: dashboard.ts
frontend/utils/: dashboardMapper.ts  tableMapper.ts
webapp/: package.json
webapp/app/: page.tsx
(+5 files in other folders)
