[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["acaero <davidschaefer42@gmail.com>"]
readme = "README.md"
packages = [{ include = "*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.3"
fastapi = "^0.115.11"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
